automatische konvertierung nicht alphanumerischer Zeichen bei label erstellung

--- a/evoks/theme/templates/modals/create_term.html
+++ b/evoks/theme/templates/modals/create_term.html
@@ -18,7 +18,7 @@
                         </h3>
                         <div class="mt-2">
                             <p class="text-sm text-gray-500">
-                                Enter a term name and label and create one from scratch! Maximum length is 50.
+                                Enter a term name and label and create one from scratch! Maximum length is 200 characters. Special characters like "!" will be removed automatically. 
                             </p>
                         </div>
 
@@ -42,7 +42,7 @@
                                                 class="block text-sm font-medium text-gray-700">skos:prefLabel
                                             </label>
                                             <div>
-                                                <input type="text" name="term-label" id="text" required maxlength=5000
+                                                <input type="text" name="term-label" id="text" required maxlength=200
                                                     class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md"
                                                     placeholder="Term Beschreibung">
                                             </div>
