Remove CRC980 branding
- Change EVOKS logo to coming soon logo
- Change project logo to coming soon logo

--- a/evoks/theme/templates/login.html
+++ b/evoks/theme/templates/login.html
@@ -70,7 +70,7 @@
                 </div>
             </form>
             <p class="text-center italic">brought to you by</p>
-            <img class="mx-auto h-12 w-auto" src="{% static 'assets/epi.png' %}" alt="Evoks">
+            <img class="mx-auto h-12 w-auto" src="{% static 'assets/logo2.png' %}" alt="Evoks">
 
         </div>
     </div>
