Fix hardcoded urls
- prevented using reverse proxy and custom url slugs

--- a/evoks/theme/templates/login.html
+++ b/evoks/theme/templates/login.html
@@ -25,7 +25,7 @@
                 </h2>
                 <p class="mt-2 text-center text-sm text-gray-600">
                     or
-                    <a href="/signup" class="font-medium text-regal-blue hover:text-gray-500">
+                    <a href="{% url 'signup' %}" class="font-medium text-regal-blue hover:text-gray-500">
                         create account
                     </a>
                 </p>
