--- a/evoks/theme/templates/reset_password_complete.html
+++ b/evoks/theme/templates/reset_password_complete.html
@@ -22,7 +22,7 @@
                     Your password has been set! You can login to your account.
                 </p>
                 <div class="text-center mt-3">
-                    <a href="/login" class="font-medium text-regal-blue hover:text-gray-500">
+                    <a href="{% url 'login' %}" class="font-medium text-regal-blue hover:text-gray-500">
                         Login
                     </a>
                 </div>
