--- a/evoks/theme/templates/teams.html
+++ b/evoks/theme/templates/teams.html
@@ -67,7 +67,7 @@
 																<div class="flex items-center">
 																	<div class="ml-4">
 																		<div class="text-sm text-gray-900">
-																			<a href="/teams/{{team.name}}">
+																			<a href="{% url 'teams' team.name %}">
 																				{{team.name}}
 																			</a>
 																		</div>
